--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   </head>
   <body>
-    <p>Hello World!</p>
+    <h2>D3 Sandbox: Circles or Melange?</h2>
   <script src="app.js"></script>
   <script>app.init()</script>
   </body>
