--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
     <h2>D3 Sandbox: Circles or Melange?</h2>
