--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-<!--     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
-    <script src="./lib/d3/build/d3.min.js"></script>
+    <title>D3 Sandbox</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <script src="./lib/d3/build/d3.min.js"></script>
   </head>
   <body>
-    <h3>D3 Sandbox: Circles or Melange?</h3>
-  <script src="app.js"></script>
-  <script>app.init()</script>
+    <script src="app.js"></script>
   </body>
 </html>
