--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>D3 Sandbox</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="./lib/d3/build/d3.min.js"></script>
   </head>
   <body>
+
+    <div class="title">
+      <a href="#">About</a>
+      <a href="#">Products</a>
+      <a href="#">Contact</a>
+    </div>
+
+    <a class="action" href="#">Buy Now</a>
+
     <script src="app.js"></script>
   </body>
 </html>
