--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,12 @@
 
     <a class="action" href="#">Buy Now</a>
 
+    <div class="chart">
+      <div>Billy</div>
+      <div>Cindy</div>
+      <div>Walter</div>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
