--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,14 @@
 
     <a class="action" href="#">Buy Now</a> -->
 
-    <div class="chart">
+    <div id="block"></div>
+
+    <!-- <div class="chart"> -->
 <!-- start visualizing d3
       <div>Billy</div>
       <div>Cindy</div>
       <div>Walter</div> -->
-    </div>
+    <!-- </div> -->
 
     <script src="./bundle.js"></script>
   </body>
