--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>D3 Sandbox</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="./lib/d3/build/d3.min.js"></script>
+    <script src="./lib/jquery/dist/jquery.min.js"></script>
   </head>
   <body>
 
@@ -17,7 +18,14 @@
 
     <a class="action" href="#">Buy Now</a> -->
 
-    <div id="block"></div>
+  <!-- reuse animations
+    <div id="block"></div> -->
+
+    <div class="block a"></div>
+    <div class="block b"></div>
+
+    <button class="go">Go!</button>
+    <button class="goNow">Go Now!</button>
 
     <!-- <div class="chart"> -->
 <!-- start visualizing d3
